Prototype Development - Implementing related documents / external links for topics - Adding subtopics snippet for environment topic block

--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -40,7 +40,7 @@
                     <li ng-repeat="topic in topics">
                         <a class="block block-hover" ng-show="topic.description !== ''" ui-sref="admin.prototype.topic({topicId: topic.topicId})">
                             <h3>{{topic.name}}</h3>
-                            <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
+                            <span class="subtopics">Air, Water, Fish &amp; Wildlife, etc.</span>
                         </a>
                         <a class="block block-hover" ng-show="topic.description ===''" ui-sref="#">
                             <h3>{{topic.name}}</h3>
