--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -43,34 +43,23 @@
             <section class="card">
                 <h2 class="card-title">Related Documents</h2>
                 <div class="resource-list resource-list-sm list-group">
-                    <a class="list-group-item list-group-item-action" href="#">
+                    <a class="list-group-item list-group-item-action" href="http://a100.gov.bc.ca/appsdata/epic/documents/p285/1237403247586_286469e2062a9eff93eeb05dbbaf5feb44436a0a2dce54b6eef3ef5cdccfb280.pdf" target="_blank">
                         <span class="avatar">
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <span class="primary">Document Link</span>
+                            <span class="primary">Mount Milligan EA Certificate - Issued March 16, 2009</span>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
                         </span>
                     </a>
-                    <a class="list-group-item list-group-item-action" href="#">
+                    <a class="list-group-item list-group-item-action" href="http://a100.gov.bc.ca/appsdata/epic/documents/p285/d35402/1362418919238_7663b740436f6524ba2a1c5cf145e0cee79912c6feb99d7932b630eaeaf6fae0.pdf" target="_blank">
                         <span class="avatar">
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <span class="primary">Document Link</span>
-                        </span>
-                        <span class="actions">
-                            <i class="material-icons md-18">file_download</i>
-                        </span>
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#">
-                        <span class="avatar">
-                            <i class="material-icons md-18">insert_drive_file</i>
-                        </span>
-                        <span class="title">
-                            <span class="primary">Document Link</span>
+                            <span class="primary">Mount Milligan EA Certificate - Amendment Issued March 1, 2013</span>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
@@ -82,9 +71,9 @@
             <section class="card">
                 <h2 class="card-title">Links of Interest</h2>
                 <ul class="resource-list resource-list-sm list-group">
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
+                    <li class="list-group-item"><a href="http://www.eao.gov.bc.ca/" target="_blank">British Columbia Environmental Assessment Office</a></li>
+                    <li class="list-group-item"><a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_project_home_285.html" target="_blank">Mount Milligan Environmental Assessment</a></li>
+                    <li class="list-group-item"><a href="http://www2.gov.bc.ca/gov/content/environment" target="_blank">Ministry of Environment: Environmental Protection & Sustainability</a></li>
                 </ul>
             </section>
 
