Prototype Development - Binding actions-main.html

--- a/modules/prototype/client/styles/helpers/helpers.scss
+++ b/modules/prototype/client/styles/helpers/helpers.scss
@@ -120,6 +120,14 @@ p {
     }
 }
 
+.form-group {
+    font-size: 0.875rem;
+
+    .form-control {
+        font-size: 0.875rem;
+    }
+}
+
 
 /* ICON HELPERS */
 .material-icons.md-18 { font-size: 18px; }
