--- a/modules/prototype/client/views/conditions-main.html
+++ b/modules/prototype/client/views/conditions-main.html
@@ -67,8 +67,20 @@
         <aside class="col-sm-12 col-md-5 col-lg-4">
 
             <section class="card">
-                <h2 class="card-title">Filter Control Goes Here</h2>
+                <h2 class="card-title">Filter Conditions</h2>
                 <div class="card-block">
+                    <div class="form-group">
+                        <label class="control-label">Projects (Mines)</label>
+                        <input class="form-control" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Keywords</label>
+                        <input class="form-control" type="text" />
+                    </div>
+                    <div class="buttons">
+                        <button class="btn btn-default">Clear</button>
+                        <button class="btn btn-primary">Apply</button>
+                    </div>
                 </div>
             </section>
             
