--- a/modules/prototype/client/views/actions-main.html
+++ b/modules/prototype/client/views/actions-main.html
@@ -33,24 +33,24 @@
                     </div>
                 </div>
 
-                <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
+                <table ng-table="tableParams" class="inspections-grid actions-grid ce-grid table table-striped table-hover" show-filter="false">
                     <tr ng-repeat="action in project.actions">
                         <td class="id-col"
                             header-class="'id-col'"
                             data-title="'Name'"
                             filter="{'name':'text'}"
                             sortable="'name'">
-                            <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.name}}</a>
-                            <pre class="row-desc" ng-bind-html="condition.description"></pre>
+                            <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{action.orderId}}</a>
+                            <pre class="row-desc" ng-bind-html="action.text"></pre>
                             <div class="tag-list">
-                                <span class="tag tag-default" ng-repeat="topic in condition.topics">{{topic.name}}</span>
+                                <span class="tag tag-default" ng-repeat="topic in condition.topics">{{action.name}}</span>
                             </div>
                         </td>
                         <td class="date-col" 
                             header-class="'date-col'" 
-                            data-title="'Agency'"
+                            data-title="'Date'"
                             filter="{'agency':'text'}"
-                            sortable="'agency'">{{condition.agency}}</td>
+                            sortable="'agency'">{{action.issuedDate}}</td>
                     </tr>
                 </table>
             </section>
@@ -59,8 +59,20 @@
         <aside class="col-sm-12 col-md-5 col-lg-4">
 
             <section class="card">
-                <h2 class="card-title">Filter Control Goes Here</h2>
+                <h2 class="card-title">Filter Actions</h2>
                 <div class="card-block">
+                    <div class="form-group">
+                        <label class="control-label">Action ID</label>
+                        <input class="form-control" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Keywords</label>
+                        <input class="form-control" type="text" />
+                    </div>
+                    <div class="buttons">
+                        <button class="btn btn-default">Clear</button>
+                        <button class="btn btn-primary">Apply</button>
+                    </div>
                 </div>
             </section>
             
