PROTOTYPE: bind up topics/subtopics with conditions/inspections/actions

--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -28,7 +28,7 @@
                             <span class="title">
                                 <span class="primary">{{subtopic.name}}</span>
                             </span>
-                            <span class="metric">{{conditions.length}}</span>
+                            <span class="metric">{{subtopic.inspections.length}}</span>
                         </a>
                     </li>
                 </ul>
