--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -38,16 +38,16 @@
                 <div class="tab-content">
                     <div class="tab-pane active" id="conditions" role="tabpanel">
                         <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
-                            <tr ng-repeat="condition in project.subtopic.conditions">
+                            <tr ng-repeat="condition in subtopic.conditions">
                                 <td class="id-col"
                                     header-class="'id-col'"
                                     data-title="'Name'"
                                     filter="{'name':'text'}"
                                     sortable="'name'">
-                                    <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.name}}</a>
-                                    <pre class="row-desc" ng-bind-html="condition.description"></pre>
+                                    <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.title}}</a>
+                                    <pre class="row-desc" ng-bind-html="condition.conditionText"></pre>
                                     <div class="tag-list">
-                                        <span class="tag tag-default" ng-repeat="topic in condition.topics">{{topic.name}}</span>
+                                        <span class="tag tag-default" ng-repeat="topic in condition.topics">{{topic}}</span>
                                     </div>
                                 </td>
                                 <td class="date-col" 
@@ -60,15 +60,15 @@
                     </div>
                     <div class="tab-pane" id="inspections" role="tabpanel">
                         <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
-                            <tr ng-repeat="inspection in project.subtopic.inspections">
+                            <tr ng-repeat="inspection in subtopic.inspections">
                                 <td class="id-col"
                                     header-class="'id-col'"
                                     data-title="'ID'"
                                     filter="{'inspectionID':'text'}"
                                     sortable="'inspection._id'">
-                                    <a ui-sref="admin.prototype.inspection({inspectionId:inspection._id})">{{inspection._id}} ({{inspection.agency}}) </a>
+                                    <a ui-sref="admin.prototype.inspection({inspectionId:inspection.inspectionId})">{{inspection.inspectionId}} ({{inspection.agency}}) </a>
                                     <div class="tag-list">
-                                        <span class="tag tag-default" ng-repeat="topic in inspection.topics">{{topic.name}}</span>
+                                        <span class="tag tag-default" ng-repeat="topic in inspection.topics">{{topic}}</span>
                                     </div>
                                 </td>
                                 <td class="date-col" 
@@ -88,16 +88,16 @@
                                     filter="{'name':'text'}"
                                     sortable="'name'">
                                     <a ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
-                                    <pre class="row-desc" ng-bind-html="action.detail"></pre>
+                                    <pre class="row-desc" ng-bind-html="action.text"></pre>
                                     <div class="tag-list">
-                                        <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic.name}}</span>
+                                        <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic}}</span>
                                     </div>
                                 </td>
                                 <td class="date-col" 
                                     header-class="'date-col'" 
                                     data-title="'Date'"
                                     filter="{'issueDate':'text'}"
-                                    sortable="'issueDate'">{{action.issueDate}}</td>
+                                    sortable="'issueDate'">{{action.issuedDate}}</td>
                             </tr>
                         </table>
                     </div>
