--- a/modules/prototype/client/styles/helpers/helpers.scss
+++ b/modules/prototype/client/styles/helpers/helpers.scss
@@ -85,9 +85,9 @@ p {
 
 /* BOOTSTRAP OVERRIDES */
 .tag-default {
-    color: #FFF;
-    font-weight: normal;
-    background: #5475a7;
+    color: #494949;
+    font-weight: bold;
+    background: #DDD;
 }
 
 .table {
