--- a/modules/prototype/client/views/actions-main.html
+++ b/modules/prototype/client/views/actions-main.html
@@ -8,7 +8,7 @@
          <span>/</span>
          <a ui-sref="admin.prototype.projectmain">{{project.name}}</a>
          <span>/</span>
-         <span>Project Conditions</span>
+         <span>Project Actions</span>
     </div>
 
     <div class="title-container">
