--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
 
-                <table ng-table="tableParams" class="inspections-grid actions-grid ce-grid table table-striped table-hover" show-filter="false">
+                <table ng-table="tableParams" class="actions-grid ce-grid table table-striped table-hover" show-filter="false">
                     <tr ng-repeat="action in inspectionActions">
                         <td class="id-col"
                             header-class="'id-col'"
@@ -150,15 +150,6 @@
                         </span>
                     </li>
                 </div>
-            </section>
-
-            <section class="card">
-                <h2 class="card-title">External Resources</h2>
-                <ul class="resource-list resource-list-sm list-group">
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                </ul>
             </section>
             
         </aside>
