--- a/modules/prototype/client/views/actions-main.html
+++ b/modules/prototype/client/views/actions-main.html
@@ -19,7 +19,7 @@
         
             <section>
                 <div class="title-bar">
-                    <h3>Viewing {{project.conditions.length}} of {{project.conditions.length}} Conditions</h3>
+                    <h3>Viewing {{actions.length}} of {{actions.length}} Actions</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
@@ -34,16 +34,16 @@
                 </div>
 
                 <table ng-table="tableParams" class="inspections-grid actions-grid ce-grid table table-striped table-hover" show-filter="false">
-                    <tr ng-repeat="action in project.actions">
+                    <tr ng-repeat="action in actions">
                         <td class="id-col"
                             header-class="'id-col'"
                             data-title="'Name'"
                             filter="{'name':'text'}"
                             sortable="'name'">
-                            <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{action.orderId}}</a>
+                            <a ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
                             <pre class="row-desc" ng-bind-html="action.text"></pre>
                             <div class="tag-list">
-                                <span class="tag tag-default" ng-repeat="topic in condition.topics">{{action.name}}</span>
+                                <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic}}</span>
                             </div>
                         </td>
                         <td class="date-col" 
