--- a/modules/prototype/client/views/conditions-main.html
+++ b/modules/prototype/client/views/conditions-main.html
@@ -19,7 +19,7 @@
         
             <section>
                 <div class="title-bar">
-                    <h3>Viewing {{project.conditions.length}} of {{project.conditions.length}} Conditions</h3>
+                    <h3>Viewing {{conditions.length}} of {{conditions.length}} Conditions</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
@@ -42,16 +42,16 @@
                 </div>
 
                 <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
-                    <tr ng-repeat="condition in project.conditions">
+                    <tr ng-repeat="condition in conditions">
                         <td class="id-col"
                             header-class="'id-col'"
                             data-title="'Name'"
                             filter="{'name':'text'}"
                             sortable="'name'">
-                            <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.name}}</a>
-                            <pre class="row-desc" ng-bind-html="condition.description"></pre>
+                            <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.title}}</a>
+                            <pre class="row-desc" ng-bind-html="condition.conditionText"></pre>
                             <div class="tag-list">
-                                <span class="tag tag-default" ng-repeat="topic in condition.topics">{{topic.name}}</span>
+                                <span class="tag tag-default" ng-repeat="topic in condition.topics">{{topic}}</span>
                             </div>
                         </td>
                         <td class="date-col" 
