Better formatting, render the page regardless of the link attributes and hrefs being messed up.

--- a/modules/core/server/views/prototype.layout.view.html
+++ b/modules/core/server/views/prototype.layout.view.html
@@ -57,7 +57,7 @@
 		var links = document.getElementsByTagName("link");
 		for (var x in links) {
 			var link = links[x];
-			if (link.getAttribute("id") === "mainstyle") {
+			if (link && link.getAttribute && link.getAttribute("id") === "mainstyle") {
 				console.log(link.href);
 				link.href = link.href + "?id=" + new Date().getMilliseconds();
 			}
