--- a/modules/prototype/client/views/actions-main.html
+++ b/modules/prototype/client/views/actions-main.html
@@ -19,7 +19,7 @@
         
             <section>
                 <div class="title-bar">
-                    <h3>Viewing {{actions.length}} of {{actions.length}} Actions</h3>
+                    <h3>Viewing {{actions.length}} Actions</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
