--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -48,6 +48,7 @@
                         </a>
                     </li>
                 </ul>
+                <a class="read-more-link mt-05" href="/admin/prototype/conditions">Browse all Conditions for {{project.name}} »</a>
             </section>
 
             <section>
@@ -64,7 +65,7 @@
                         </span>
                     </li>
                 </ul>
-                <a class="read-more-link mt-05" href="javascript:void();">Learn More about Authorizations for {{project.name}} »</a>
+                <a class="read-more-link mt-1" href="javascript:void();">Learn More about Authorizations for {{project.name}} »</a>
             </section>
 
             <section>
@@ -105,6 +106,12 @@
 
             <section class="card">
                 <h2 class="card-title">Details</h2>
+                <div class="map-thumb">
+                    <img src="admin/prototype/images/map-thumb.png"  
+                        data-toggle="modal" 
+                        data-target="#mapWindow" />
+                </div>
+
                 <div class="card-block">
                     <ul class="detail-list">
                         <li class="clearfix">
