PROTOTYPE: thumbnail image path fix.

--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -48,7 +48,7 @@
                         </a>
                     </li>
                 </ul>
-                <a class="read-more-link mt-05" href="/admin/prototype/conditions">Browse all Conditions for {{project.name}} »</a>
+                <a class="read-more-link mt-05" ui-sref="admin.prototype.conditionsmain">Browse all Conditions for {{project.name}} »</a>
             </section>
 
             <section>
@@ -107,7 +107,7 @@
             <section class="card">
                 <h2 class="card-title">Details</h2>
                 <div class="map-thumb">
-                    <img src="admin/prototype/images/map-thumb.png"  
+                    <img src="modules/prototype/client/images/map-thumb.png"
                         data-toggle="modal" 
                         data-target="#mapWindow" />
                 </div>
