Prototype Development - Fixed issues with disabled block styling - Fixed path to map thumb image

--- a/modules/prototype/client/styles/components/blocks.scss
+++ b/modules/prototype/client/styles/components/blocks.scss
@@ -76,7 +76,13 @@
             text-overflow: ellipsis;
             overflow: hidden;
         } 
+
+        &.disabled {
+            opacity: 0.5;
+        }
     }
+
+    
 }
 
 .metric {
@@ -102,6 +108,11 @@
         &:hover {
             text-decoration: none;
         }
+
+        &.disabled {
+            opacity: 0.5;
+        }
+
     }
 
     h3 {
