--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -42,7 +42,7 @@
                             <h3>{{topic.name}}</h3>
                             <span class="subtopics">Air, Water, Land, Tailings Management etc.</span>
                         </a>
-                        <a class="block block-hover" ng-show="topic.description ===''" ui-sref="#">
+                        <a class="block disabled" ng-show="topic.description ===''" ui-sref="#">
                             <h3>{{topic.name}}</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
@@ -107,7 +107,7 @@
             <section class="card">
                 <h2 class="card-title">Details</h2>
                 <div class="map-thumb">
-                    <img src="admin/prototype/images/map-thumb.png"  
+                    <img src="modules/prototype/client/images/map-thumb.png"  
                         data-toggle="modal" 
                         data-target="#mapWindow" />
                 </div>
