Prototype Development - Fixing markup/layout for latest implementation of the map control

--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -36,7 +36,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">assignment_late</i>
+                                <i class="material-icons">assignment</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Actions</span>
