--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -231,33 +231,6 @@ main {
     transform: none !important;
 }
 
-.modal-content iframe {
-    position: absolute;
-    border: 0;
-}
-
-.map-thumbnail {
-    margin-bottom: 0.5rem;
-    height: 180px;
-    background: #FFF;
-}
-
-.map-layers-view {
-    position: absolute;
-}
-
-.map-layers-view,
-.angular-google-map {
-    width: 100%;
-    height: 100%;
-}
-
-.angular-google-map-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
 .tag {
     padding: 0.4em 0.6em;
 }
@@ -303,7 +276,52 @@ main {
             background-color: #FFF;
             min-width: 100%;
             max-width: 100%;
-            min-height: 180px;
             cursor: pointer;
         }
+}
+
+.map-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    .title-container {
+        color: #FFF;
+        background: #003366;
+        height: 70px;
+        position: relative;
+
+        h1 {
+            margin-top: 1.1rem;
+            margin-left: 1rem;
+        }
+
+        a {
+            position: absolute;
+            right: 1rem;
+            top: 1.5rem;
+            color: #FFF;
+        }
+    }
+}
+
+.map-layers-view {
+    position: absolute;
+    top: 70px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.angular-google-map {
+    width: 100%;
+    height: 100%;
+}
+
+.angular-google-map-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
