--- a/modules/prototype/client/styles/prototype.css
+++ b/modules/prototype/client/styles/prototype.css
@@ -313,28 +313,6 @@ main section {
   -webkit-transform: none !important;
   transform: none !important; }
 
-.modal-content iframe {
-  position: absolute;
-  border: 0; }
-
-.map-thumbnail {
-  margin-bottom: 0.5rem;
-  height: 180px;
-  background: #FFF; }
-
-.map-layers-view {
-  position: absolute; }
-
-.map-layers-view,
-.angular-google-map {
-  width: 100%;
-  height: 100%; }
-
-.angular-google-map-container {
-  position: absolute;
-  width: 100%;
-  height: 100%; }
-
 .tag {
   padding: 0.4em 0.6em; }
 
@@ -364,8 +342,43 @@ main section {
     background-color: #FFF;
     min-width: 100%;
     max-width: 100%;
-    min-height: 180px;
     cursor: pointer; }
+
+.map-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+  .map-container .title-container {
+    color: #FFF;
+    background: #003366;
+    height: 70px;
+    position: relative; }
+    .map-container .title-container h1 {
+      margin-top: 1.1rem;
+      margin-left: 1rem; }
+    .map-container .title-container a {
+      position: absolute;
+      right: 1rem;
+      top: 1.7rem;
+      color: #FFF; }
+
+.map-layers-view {
+  position: absolute;
+  top: 70px;
+  bottom: 0;
+  left: 0;
+  right: 0; }
+
+.angular-google-map {
+  width: 100%;
+  height: 100%; }
+
+.angular-google-map-container {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
 
 /* COMPONENTS */
 .action-summary p {
