--- a/modules/prototype/client/views/map.html
+++ b/modules/prototype/client/views/map.html
@@ -1,6 +1,12 @@
 
-<div class="container">
+<div class="map-container">  
     
+    <div class="title-container">
+        <h1>Mount Milligan Mine</h1>
+        <a ui-sref="admin.prototype.projectmain">Close</a>
+    </div>
+
+    <!--
     <div class="breadcrumbs">
         <a ui-sref="projects">MEM</a>
         <span>/</span>
@@ -8,6 +14,8 @@
         <span>/</span> 
         <span>{{project.name}}</span>
     </div>
+    -->
+
     <div class="map-layers-view">
         <ui-gmap-google-map
             id='project-map'
@@ -26,4 +34,5 @@
             </ui-gmap-layer>
         </ui-gmap-google-map>
     </div>
+
 </div>
