--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -50,7 +50,7 @@
                         </span>
                     </li>
                 </ul>
-                <a class="read-more-link mt-1" href="javascript:void();">Learn More about Authorizations for {{project.name}} »</a>
+                <a class="read-more-link mt-1" ui-sref="admin.prototype.authorizations">Learn More about Authorizations for {{project.name}} »</a>
                 <!-- <a class="read-more-link mt-05" ui-sref="admin.prototype.conditionsmain">Browse all Conditions for {{project.name}} »</a> -->
             </section>
 
