--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -238,7 +238,7 @@ main {
 .card-block {
     .form-group {
         label {
-            font-size: 0.75rem;
+            font-size: 0.875rem;
             font-weight: bold;
         }
     }
@@ -324,4 +324,19 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
+}
+
+
+.conditions aside .card-title {
+    background: #EEE;
+    color: #494949;
+}
+
+.checkbox-temp {
+    label {
+        display: block;
+        width: 50%;
+        float: left;
+        font-weight: normal !important;
+    }
 }
