--- a/modules/prototype/client/styles/prototype.css
+++ b/modules/prototype/client/styles/prototype.css
@@ -89,10 +89,12 @@ p {
 .table-hover tr:hover {
   background: #f1f3f5; }
 
-.form-group {
+.form-group label {
   font-size: 0.875rem; }
-  .form-group .form-control {
-    font-size: 0.875rem; }
+.form-group .form-control {
+  font-size: 0.875rem; }
+.form-group .tag-list {
+  margin-top: 0.5rem; }
 
 /* ICON HELPERS */
 .material-icons.md-18 {
@@ -317,7 +319,7 @@ main section {
   padding: 0.4em 0.6em; }
 
 .card-block .form-group label {
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   font-weight: bold; }
 .card-block .buttons {
   margin-top: 0.5rem; }
@@ -361,7 +363,7 @@ main section {
     .map-container .title-container a {
       position: absolute;
       right: 1rem;
-      top: 1.7rem;
+      top: 1.5rem;
       color: #FFF; }
 
 .map-layers-view {
@@ -379,6 +381,16 @@ main section {
   position: absolute;
   width: 100%;
   height: 100%; }
+
+.conditions aside .card-title {
+  background: #EEE;
+  color: #494949; }
+
+.checkbox-temp label {
+  display: block;
+  width: 50%;
+  float: left;
+  font-weight: normal !important; }
 
 /* COMPONENTS */
 .action-summary p {
